Switching to Java 17 records
Signed-off-by: clinique <gael@lhopital.org>